update  : flask_server 및 새로운 메세지 정의

--- a/task_manager/src/control_msgs/CMakeLists.txt
+++ b/task_manager/src/control_msgs/CMakeLists.txt
@@ -20,7 +20,8 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/RobotArriveState.msg"
   "msg/RobotRecevieMoving.msg"
   "msg/RobotRequestMoving.msg"
-  "msg/AlertToChat.msg"  
+  "msg/AlertToChat.msg"
+  "msg/ArUcoControl.msg"  
   )
 
 
